<!-- activity_destination_selection.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextDeparture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_departure_place"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_destination_place"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDepartureDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_departure_date"
        android:focusable="false"
        android:clickable="true" />

    <EditText
        android:id="@+id/editTextReturnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_return_date"
        android:focusable="false"
        android:clickable="true" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_next" />

</LinearLayout>
